--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,16 +18,13 @@
                         <a href="#mainCarousel">Home</a>
                     </li>
                     <li>
-                        <a href="#about">Sobre</a>
+                        <a href="#blog">Depoimentos</a>
                     </li>
                     <li>
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="/users/login">Login</a>
                     </li>
                     <li>
-                        <a href="#blog">Blog</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Entrar</a>
+                        <a href="/users/new">Cadastre-se</a>
                     </li>
                 </ul>
             </div>
@@ -201,152 +198,9 @@
 
     </header>
     
-    <div id="about">
-    	<div class="container">
-    		<div class="text">
-    			<h2>Sobre Nós</h2>
-    			<hr>
-    			<p>Ne aeterno tincidunt nam. Te utamur laboramus necessitatibus quo, nam ea ludus perpetua. Eum et vidit nostro commodo, conceptam dissentiunt definitiones eu eum, putant scripserit cu qui. Rebum nominavi deterruisset in per, id odio case repudiare mea, ius periculis philosophia cu. Mei dolor discere constituam ea, no unum erant nihil qui. In regione dissentias cum.</p>
-			</div>
-
-        <div class="col-md-6">
-            <!-- begin panel group -->
-            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                
-                <!-- panel 1 -->
-                <div class="panel panel-default">
-                    <!--wrap panel heading in span to trigger image change as well as collapse -->
-                    <span class="side-tab" data-target="#tab1" data-toggle="tab" role="tab" aria-expanded="false">
-                        <div class="panel-heading" role="tab" id="headingOne"data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <h4 class="panel-title">Responsive Design</h4>
-                        </div>
-                    </span>
-                    
-                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                        <div class="panel-body">
-                        <!-- Tab content goes here -->
-                        <p>Lorem ipsum dolor sit amet, ne sit consul numquam. Quidam causae mel cu, atqui expetendis vis in. Novum erant repudiandae ad ius, et timeam graecis est. In integre tincidunt pro, suas iracundia no nec. An debet nemore eirmod vim, erant vitae recteque usu ex.</p>
-                        <p>Sonet fuisset ad vis, ut voluptua verterem volutpat vix, at quaeque invenire pro. Ius eu brute verear lobortis, utroque postulant democritum nam et. At ius modo legendos, ut illum propriae apeirian his. Eu sit idque dignissim. Et nec utamur argumentum, malorum pericula eos te.</p>
-                        </div>
-                    </div>
-                </div> 
-                <!-- / panel 1 -->
-                
-                <!-- panel 2 -->
-                <div class="panel panel-default">
-                    <!--wrap panel heading in span to trigger image change as well as collapse -->
-                    <span class="side-tab" data-target="#tab2" data-toggle="tab" role="tab" aria-expanded="false">
-                        <div class="panel-heading" role="tab" id="headingTwo" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <h4 class="panel-title collapsed">Efficient Code</h4>
-                        </div>
-                    </span>
-
-                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                        <div class="panel-body">
-                        <!-- Tab content goes here -->
-                        <p>Lorem ipsum dolor sit amet, ne sit consul numquam. Quidam causae mel cu, atqui expetendis vis in. Novum erant repudiandae ad ius, et timeam graecis est. In integre tincidunt pro, suas iracundia no nec. An debet nemore eirmod vim, erant vitae recteque usu ex.</p>
-                        <p>Sonet fuisset ad vis, ut voluptua verterem volutpat vix, at quaeque invenire pro. Ius eu brute verear lobortis, utroque postulant democritum nam et. At ius modo legendos, ut illum propriae apeirian his. Eu sit idque dignissim. Et nec utamur argumentum, malorum pericula eos te.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- / panel 2 -->
-                
-                <!--  panel 3 -->
-                <div class="panel panel-default">
-                    <!--wrap panel heading in span to trigger image change as well as collapse -->
-                    <span class="side-tab" data-target="#tab3" data-toggle="tab" role="tab" aria-expanded="false">
-                        <div class="panel-heading" role="tab" id="headingThree"  class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <h4 class="panel-title">24 Hour Support</h4>
-                        </div>
-                    </span>
-
-                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                          <div class="panel-body">
-                          <!-- tab content goes here -->
-                        <p>Lorem ipsum dolor sit amet, ne sit consul numquam. Quidam causae mel cu, atqui expetendis vis in. Novum erant repudiandae ad ius, et timeam graecis est. In integre tincidunt pro, suas iracundia no nec. An debet nemore eirmod vim, erant vitae recteque usu ex.</p>
-                        <p>Sonet fuisset ad vis, ut voluptua verterem volutpat vix, at quaeque invenire pro. Ius eu brute verear lobortis, utroque postulant democritum nam et. At ius modo legendos, ut illum propriae apeirian his. Eu sit idque dignissim. Et nec utamur argumentum, malorum pericula eos te.</p>
-                          </div>
-                        </div>
-                      </div>
-            	</div>
-             </div> 
-             
-   	 		 <div class="col-md-6">
-    			<div id="carousel" class="carousel slide" data-ride="carousel">
-				<!-- Indicators -->
-					<ol class="carousel-indicators">
-			  			<li data-target="#carousel" data-slide-to="0" class="active"></li>
-			    		<li data-target="#carousel" data-slide-to="1"></li>
-			    		<li data-target="#carousel" data-slide-to="2"></li>
-			    		<li data-target="#carousel" data-slide-to="3"></li>
-			    		<li data-target="#carousel" data-slide-to="4"></li>
-					</ol>
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner">
-			    		<div class="item active">
-			    			<img src= <%= asset_path 'placeholder.png'%> alt="First slide">
-			    		</div>
-			    		<div class="item">
-			    			<img src= <%= asset_path 'placeholder.png'%> alt="Second slide">
-			    		</div>
-			    		<div class="item">
-			    			<img src= <%= asset_path 'placeholder.png'%> alt="Third slide">
-			    		</div>
-			    		<div class="item">
-			    			<img src= <%= asset_path 'placeholder.png'%> alt="Third slide">
-			    		</div>
-			    		<div class="item">
-			    			<img src= <%= asset_path 'placeholder.png'%> alt="Third slide">
-			    		</div>
-					</div>
-				</div>
-			</div>
-             
-        </div>
-    </div>
-    
-    
-    <div id="portfolio">
-    	<div class="container">
-    		<h2>Our Portfolio</h2>
-    		<p>Lorem ipsum dolor sit amet, suscipit percipit mea te, est te alia utinam electram. Sea ex doctus numquam, lucilius efficiantur vim id, meis timeam cu usu. Ius atomorum neglegentur ei, ullum accusamus persecuti pro ut. Cu per adipisci quaerendum, an offendit verterem sea. Ut autem apeirian sea, libris eripuit veritus ex ius, legere iriure utamur te ius.</p>
-      			<div class="portfolioFilter">  
-        			<ul class="Portfolio-nav wow fadeIn delay-02s">
-        				<li><a href="#" data-filter="*" class="current" >All</a></li>
-            			<li><a href="#" data-filter=".webdesign" >Web design</a></li>
-            			<li><a href="#" data-filter=".appdevelopment" >App Development</a></li>
-            			<li><a href="#" data-filter=".graphicdesign" >Graphic Design</a></li>
-        			</ul>
-       			</div> 
-    	</div>
-    	
-       		<div class="portfolioContainer">
-            	<div class=" Portfolio-box appdevelopment">
-                	<a href="#"><img src= <%= asset_path 'placeholder2.png' %> alt=""></a>	
-                </div>
-                <div class="Portfolio-box webdesign">
-                	<a href="#"><img src= <%= asset_path 'placeholder2.png' %> alt=""></a>	
-                </div>
-                <div class=" Portfolio-box appdevelopment">
-                	<a href="#"><img src= <%= asset_path 'placeholder2.png' %> alt=""></a>	
-                </div>
-                <div class=" Portfolio-box webdesign" >
-                	<a href="#"><img src= <%= asset_path 'placeholder2.png' %> alt=""></a>	
-                </div>
-                <div class=" Portfolio-box graphicdesign">
-                	<a href="#"><img src= <%= asset_path 'placeholder2.png' %> alt=""></a>	
-                </div>
-                <div class=" Portfolio-box graphicdesign">
-                	<a href="#"><img src= <%= asset_path 'placeholder2.png' %> alt=""></a>	
-                </div>
-    		</div>
-    	
-    </div>
-    
-    
     <div id="blog">
     	<div class="container">
-    		<h2>Latest <span>Blog</span> Posts</h2>
+    		<h2>Depoimentos</h2>
     		<hr>
     		<div class="carousel slide" id="myCarousel">
         		<div class="carousel-inner">
@@ -358,7 +212,7 @@
 										<a href="#"><img src="http://placehold.it/360x240" alt=""></a>
 									</div>
 									<div class="caption">
-										<h4>Sed dico menandri</h4>
+										<h4>Beltrano Alfeu</h4>
 										<p>Vim ad novum solet, sit id cetero latine pertinax. Pri soleat vocent suscipiantur id, cu qui postea civibus assentior, te natum scripta fastidii mei. Et sea meliore fuisset assueverit.</p>
 										<a class="btn btn-mini" href="#">Read More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 									</div>
@@ -370,7 +224,7 @@
 										<a href="#"><img src="http://placehold.it/360x240" alt=""></a>
 									</div>
 									<div class="caption">
-										<h4>Sed dico menandri</h4>
+										<h4>Ciclano Alves</h4>
 										<p>Vim ad novum solet, sit id cetero latine pertinax. Pri soleat vocent suscipiantur id, cu qui postea civibus assentior, te natum scripta fastidii mei. Et sea meliore fuisset assueverit.</p>
 										<a class="btn btn-mini" href="#">Read More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 									</div>
@@ -382,7 +236,7 @@
 										<a href="#"><img src="http://placehold.it/360x240" alt=""></a>
 									</div>
 									<div class="caption">
-										<h4>Sed dico menandri</h4>
+										<h4>Diego Arnaldo</h4>
 										<p>Vim ad novum solet, sit id cetero latine pertinax. Pri soleat vocent suscipiantur id, cu qui postea civibus assentior, te natum scripta fastidii mei. Et sea meliore fuisset assueverit.</p>
 										<a class="btn btn-mini" href="#">Read More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 									</div>
@@ -448,10 +302,29 @@
     
     <div id="contact">
     	<div class="container">
-    		<h2>Contact Us</h2>  
-    		<p>Lorem ipsum dolor sit amet, ad harum populo reformidans ius, ei vix verear timeam. Has nibh abhorreant at, ex atqui voluptatum eam. Mei an corpora hendrerit, quo eu legere labitur ornatus.</p>
+    		<h2>Cadastre-se!</h2>  
+    		<p>Quando você está cadastrado, consegue salvar ingredientes, acessar seu histórico e suas receitas favoritas.</p>
     		<div class="col-md-6">
-    			<div class="contact-form">
+    			<div class="Sign_Form contact form">
+                    <%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
+                        <p> Usuário:  <%= f.text_field :name%> </p>
+                        <p> Email:  <%= f.text_field :email%> </p>
+                        <p> Senha:  <%= f.password_field :password%></p>
+                        <p> Confirme sua senha:  <%= f.password_field :password_confirmation%> </p>
+                        <%= f.submit :Cadastrar %>
+                    <% end %>
+                    <% flash.each do |name, msg| -%>
+                        <%= content_tag :div, msg, class: name %>
+                    <% end -%>
+                    <% if @user && @user.errors.any? %>
+                        <ul class="Signup_Errors">
+                        <% for message_error in @user.errors.full_messages %>
+                            <li>* <%= message_error %></li>
+                        <% end %>
+                        </ul>
+                    <% end %>
+                </div>
+    			<!--<div class="contact-form">
 					<form action="#" method="post">
 						<input id="name" name="name" type="text" placeholder="Name:" required>
 						<input id="email" name="email" type="text" placeholder="Email:" required>
@@ -460,7 +333,7 @@
 						<br>
 						<button name="submit" id="submit" type="submit">Send Message</button>
 					</form>
-				</div>  
+				</div>-->
 			</div>	
 			<div class="col-md-6">
 				<div class="image">
@@ -468,15 +341,12 @@
 				</div>
 			</div>
     	</div>
-    	
-		<iframe width="100%;" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="pointer-events: none; margin-top: 30px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.281992959266!2d-0.1302576842043993!3d51.5080423184772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604ce3941eb1f%3A0x1a5342fdf089c627!2sTrafalgar+Square!5e0!3m2!1sen!2suk!4v1462913556349"></iframe>
-		
     </div>
     
     
     <div id="subscribe">
     	<div class="container">
-    	    <h2>Subscribe To Us</h2>
+    	    <h2>Assine nossa newsletter</h2>
     	    <p>Ex per oblique corpora concludaturque, consulatu incorrupte an eum. In his offendit scribentur, eam ne autem tractatos. Affert molestie phaedrum vel ad, dicit audire expetendis qui ut, ne minim deleniti eum. </p>
 			<div class="col-md-8 col-md-offset-2">
              	<form action="#">
