--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,12 +1,39 @@
-<% @page_title = "UserAuth | Signup" %>
-<div class="Sign_Form">
-  <h1>Login</h1>
-  <%= form_for(:user, :url => {:controller => 'users', :action => 'login'}) do |f| %>
-    <p> Username:</br> <%= f.text_field :name%> </p>
-    <p> Password:</br> <%= f.password_field :password%></p>
-    <%= f.submit :Login %>
-  <% end %>
-  <% flash.each do |name, msg| -%>
-    <%= content_tag :div, msg, class: name %>
-  <% end -%>
-</div>
+	<div class="row">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+			<div class="login-panel panel panel-default">
+				<div class="panel-heading">Log in</div>
+				<div class="panel-body">
+					<%= form_for(:user, :url => {:controller => 'users', :action => 'login'}) do |f| %>
+						<fieldset>
+							<div class="form-group">
+								Username: <%= f.text_field :name%>
+							</div>
+							<div class="form-group">
+								Password: <%= f.password_field :password%>
+							</div>
+							<%= f.submit :Login %>
+						</fieldset>
+						<% end %>
+            <% flash.each do |name, msg| -%>
+              <%= content_tag :div, msg, class: name %>
+					  <% end -%>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<script>
+		!function ($) {
+			$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
+				$(this).find('em:first').toggleClass("glyphicon-minus");	  
+			}); 
+			$(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+		}(window.jQuery);
+
+		$(window).on('resize', function () {
+		  if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+		})
+		$(window).on('resize', function () {
+		  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+		})
+	</script>	
