--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,12 +11,12 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require_self
+ * require css/bootstrap.min.css
  *= require AdminLTE/AdminLTE
  *= require AdminLTE/skins/skin-blue
- *= require_self
- *= require css/bootstrap.min.css
- *= require css/datepicker3.css
- *= require css/styles.css
+ * require css/datepicker3.css
+ * require css/styles.css
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
