--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,39 +1,96 @@
-	<div class="row">
-		<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
-			<div class="login-panel panel panel-default">
-				<div class="panel-heading">Log in</div>
-				<div class="panel-body">
-					<%= form_for(:user, :url => {:controller => 'users', :action => 'login'}) do |f| %>
-						<fieldset>
-							<div class="form-group">
-								Username: <%= f.text_field :name%>
-							</div>
-							<div class="form-group">
-								Password: <%= f.password_field :password%>
-							</div>
-							<%= f.submit :Login %>
-						</fieldset>
-						<% end %>
-            <% flash.each do |name, msg| -%>
-              <%= content_tag :div, msg, class: name %>
-					  <% end -%>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<script>
-		!function ($) {
-			$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
-				$(this).find('em:first').toggleClass("glyphicon-minus");	  
-			}); 
-			$(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
-		}(window.jQuery);
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>AdminLTE 2 | Log in</title>
+	<meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
-		$(window).on('resize', function () {
-		  if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
-		})
-		$(window).on('resize', function () {
-		  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
-		})
-	</script>	
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+	<![endif]-->
+	<%= csrf_meta_tags %>
+</head>
+<body class="login-page">
+	<div class="login-box">
+		<div class="login-logo">
+			<a href="/"><b>Rest</b>rot</a>
+		</div><!-- /.login-logo -->
+		<div class="login-box-body">
+			<p class="login-box-msg">Log in</p>
+			<% flash.each do |name, msg| -%>
+				<%= content_tag :div, msg, class: name %>
+			<% end -%>
+			<%= form_for(:user,  :url => {:controller => 'users', :action => 'login'}) do |f| %>
+				<div class="form-group has-feedback">
+					<%= f.text_field :name, class: 'form-control', autofocus: true %>
+					<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+				</div>
+
+				<div class="form-group has-feedback">
+					<%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
+					<span class="glyphicon glyphicon-lock form-control-feedback"></span>
+				</div>
+				<div class="row">
+					<div class="col-xs-8">
+						<!-- Uncomment next section when we implement remember me option -->
+						<!-- <div class="checkbox icheck">
+							<label>
+								<input type="checkbox"> Remember Me
+							</label>
+						</div> -->
+					</div><!-- /.col -->
+					<div class="col-xs-4">
+						<%= f.submit :Login, class: 'btn btn-primary btn-block btn-flat' %>
+					</div><!-- /.col -->
+				</div>
+			<% end %>
+		</div><!-- /.login-box-body -->
+	</div><!-- /.login-box -->
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+</body>
+</html>
+
+<!-- <div class="row">
+<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+<div class="login-panel panel panel-default">
+<div class="panel-heading">Log in</div>
+<div class="panel-body">
+<%= form_for(:user, :url => {:controller => 'users', :action => 'login'}) do |f| %>
+<fieldset>
+<div class="form-group">
+Username: <%= f.text_field :name%>
+</div>
+<div class="form-group">
+Password: <%= f.password_field :password%>
+</div>
+<%= f.submit :Login %>
+</fieldset>
+<% end %>
+<% flash.each do |name, msg| -%>
+<%= content_tag :div, msg, class: name %>
+<% end -%>
+</div>
+</div>
+</div>
+</div>
+
+<script>
+!function ($) {
+$(document).on("click","ul.nav li.parent > a > span.icon", function(){
+$(this).find('em:first').toggleClass("glyphicon-minus");
+});
+$(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+}(window.jQuery);
+
+$(window).on('resize', function () {
+if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+})
+$(window).on('resize', function () {
+if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+})
+</script>	 -->
