--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,53 +1,72 @@
 <% @page_title = "UserAuth | Signup" %>
 <div class="row">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+		<div class="login-logo">
+			<a href="/"><b>Rest</b>rot</a>
+		</div>
 		<div class="login-panel panel panel-default">
-			<div class="panel-heading">Log in</div>
+			<div class="panel-heading">Register a new membership</div>
 			<div class="panel-body">
 				<%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
-					<fieldset>
-						<div class="form-group">
-							Username: <%= f.text_field :name%>
-						</div>
-						<div class="form-group">
-						    Email: <%= f.text_field :email%>
-						</div>
-						<div class="form-group">
-							Password: <%= f.password_field :password%>
-						</div>
-						<div class="form-group">
-						    Password Confirmation: <%= f.password_field :password_confirmation%>
-						</div>
-						<%= f.submit :Login %>
-					</fieldset>
+				<fieldset>
+					<div class="form-group has-feedback">
+						<%= f.text_field :name, placeholder: "Username", class: 'form-control', autofocus: true%>
+						<span class="glyphicon glyphicon-user form-control-feedback"></span>
+					</div>
+					<div class="form-group has-feedback">
+						<%= f.text_field :email, placeholder: "Email", class: 'form-control'%>
+						<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+					</div>
+					<div class="form-group has-feedback">
+						<%= f.password_field :password, placeholder: "Password", class: 'form-control', autocomplete: 'off'%>
+		        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+					</div>
+					<div class="form-group has-feedback">
+						<%= f.password_field :password_confirmation, placeholder: "Confirm your password", class: 'form-control', autocomplete: 'off'%>
+		        <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
+					</div>
+					<div class="row">
+		        <div class="col-xs-8">
+							<!-- Uncomment next section when we implement agree terms -->
+		          <!-- <div class="checkbox icheck">
+		            <label>
+		              <input type="checkbox"> I agree to the <a href="#">terms</a>
+		            </label>
+		          </div> -->
+		        </div><!-- /.col -->
+		        <div class="col-xs-4">
+							<%= f.submit :Register, class: 'btn btn-primary btn-block btn-flat' %>
+		        </div><!-- /.col -->
+		      </div>
+				</fieldset>
 				<% end %>
-                <% flash.each do |name, msg| -%>
-                    <%= content_tag :div, msg, class: name %>
-                <% end -%>
-                <% if @user && @user.errors.any? %>
-                <ul class="Signup_Errors">
-                <% for message_error in @user.errors.full_messages %>
-                    <li>* <%= message_error %></li>
-                <% end %>
-                </ul>
-                <% end %>
+				<% flash.each do |name, msg| -%>
+				<%= content_tag :div, msg, class: name %>
+				<% end -%>
+				<% if @user && @user.errors.any? %>
+				<ul class="Signup_Errors">
+					<% for message_error in @user.errors.full_messages %>
+					<li>* <%= message_error %></li>
+					<% end %>
+				</ul>
+				<% end %>
 			</div>
 		</div>
 	</div>
 </div>
 
 <script>
-	!function ($) {
-		$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
-			$(this).find('em:first').toggleClass("glyphicon-minus");	  
-		}); 
-		$(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
-	}(window.jQuery);
+!function ($) {
+	$(document).on("click","ul.nav li.parent > a > span.icon", function(){
+		$(this).find('em:first').toggleClass("glyphicon-minus");
+	});
+	$(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+}(window.jQuery);
 
-	$(window).on('resize', function () {
-	  if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
-	})
-	$(window).on('resize', function () {
-	  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
-	})
-</script>	
+$(window).on('resize', function () {
+	if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+})
+$(window).on('resize', function () {
+	if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+})
+</script>
