--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,16 +6,16 @@
 			<div class="panel-body">
 				<%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
 					<fieldset>
-						<div class="form-group">
+						<div class="form-group" id="user_name">
 							Username: <%= f.text_field :name%>
 						</div>
-						<div class="form-group">
+						<div class="form-group" id="user_email">
 						    Email: <%= f.text_field :email%>
 						</div>
-						<div class="form-group">
+						<div class="form-group" id="user_password">
 							Password: <%= f.password_field :password%>
 						</div>
-						<div class="form-group">
+						<div class="form-group" id="user_password_confirmation">
 						    Password Confirmation: <%= f.password_field :password_confirmation%>
 						</div>
 						<%= f.submit :Login %>
