--- a/app/assets/stylesheets/styles/dashboard.scss
+++ b/app/assets/stylesheets/styles/dashboard.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+}
+
+.numero-maior{
+    font-size: 40px !important;
+}
+
+.margin-top-50 {
+    margin-top: 50px;
+}
