--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -1,3 +1,73 @@
-<div>
-  Hello Dashboard
-</div>
+<div class="row">
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="info-box">
+        <span class="info-box-icon bg-green"><i class="fa fa-shopping-cart"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Ingredientes</span>
+          <span class="info-box-number numero-maior">25</span>
+        </div><!-- /.info-box-content -->
+      </div><!-- /.info-box -->
+    </div><!-- /.col -->
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="info-box">
+        <span class="info-box-icon bg-aqua"><i class="fa fa-book"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Receitas Buscadas</span>
+          <span class="info-box-number numero-maior">52</span>
+        </div><!-- /.info-box-content -->
+      </div><!-- /.info-box -->
+    </div><!-- /.col -->
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="info-box">
+        <span class="info-box-icon bg-red"><i class="fa fa-desktop"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Acessos</span>
+          <span class="info-box-number numero-maior">49</span>
+        </div><!-- /.info-box-content -->
+      </div><!-- /.info-box -->
+    </div><!-- /.col -->
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="info-box">
+        <span class="info-box-icon bg-yellow"><i class="fa fa-star-o"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Favoritos</span>
+          <span class="info-box-number numero-maior">11</span>
+        </div><!-- /.info-box-content -->
+      </div><!-- /.info-box -->
+    </div><!-- /.col -->
+  </div>
+  
+  <div class="row margin-top-50">
+    <div class="col-sm-12">
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">Últimos Ingredientes Cadastrados</h3>
+        </div><!-- /.box-header -->
+        <div class="box-body">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
+                    Arroz Integral
+                </li>
+                <li class="list-group-item">
+                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
+                    Tomates Frescos
+                </li>
+                <li class="list-group-item">
+                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
+                    Manjericão
+                </li>
+                <li class="list-group-item">
+                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
+                    Peito de Frango
+                </li>
+                <li class="list-group-item">
+                    <a href="#" class="btn-xs pull-right"><i class="fa fa-remove"></i></a>
+                    Alecrim
+                </li>
+            </ul>
+          <a href="#" class="btn btn-primary">Ver todos</a>
+        </div><!-- /.box-body -->
+      </div><!-- /.box -->
+    </div><!-- /.col -->
+  </div>
