--- a/app/views/layouts/_admin_lte_2_sidebar.html.erb
+++ b/app/views/layouts/_admin_lte_2_sidebar.html.erb
@@ -10,7 +10,9 @@
         <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
       </div>
       <div class="pull-left info">
-        <p>Alexander Pierce</p>
+        <% if current_user %>
+          <p><%= current_user.name %></p>
+        <% end %>
         <!-- Status -->
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
@@ -19,7 +21,7 @@
     <!-- search form (Optional) -->
     <form action="#" method="get" class="sidebar-form">
       <div class="input-group">
-        <input type="text" name="q" class="form-control" placeholder="Search..."/>
+        <input type="text" name="q" class="form-control" placeholder="Pesquisar..."/>
         <span class="input-group-btn">
           <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
         </span>
@@ -29,17 +31,21 @@
 
     <!-- Sidebar Menu -->
     <ul class="sidebar-menu">
-      <li class="header">HEADER</li>
+      <li class="header">Opções</li>
         <!-- Optionally, you can add icons to the links -->
-      <li class="active"><a href="#"><i class='fa fa-link'></i> <span>Link</span></a></li>
-      <li><a href="#"><i class='fa fa-link'></i> <span>Another Link</span></a></li>
-      <li class="treeview">
+      <li class="active"><a href="#"><i class='fa fa-link'></i> <span>Home</span></a></li>
+      <li><a href="#"><i class='fa fa-link'></i> <span>Nova Busca</span></a></li>
+      <li><a href="#"><i class='fa fa-link'></i> <span>Meus Ingredientes</span></a></li>
+      <li><a href="#"><i class='fa fa-link'></i> <span>Favoritos</span></a></li>
+      <li><a href="#"><i class='fa fa-link'></i> <span>Histórico</span></a></li>
+      <li><a href="#"><i class='fa fa-link'></i> <span>Preferências</span></a></li>
+      <<!--li class="treeview">
         <a href="#"><i class='fa fa-link'></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
         <ul class="treeview-menu">
           <li><a href="#">Link in level 2</a></li>
           <li><a href="#">Link in level 2</a></li>
         </ul>
-      </li>
+      </l-->i>
     </ul><!-- /.sidebar-menu -->
   </section>
   <!-- /.sidebar -->
