--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -18,10 +18,11 @@
 			<%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
 				<fieldset>
 			    	<div class="form-group">
-			    		Nova Senha: <%= f.password_field :password%>
+			    		<div class ="description">Nova Senha:</div><div class ="field"><%= f.password_field :password%> </div>
 			    	</div>
+
 			    	<div class="form-group">
-			    	    Confirme Nova Senha: <%= f.password_field :password_confirmation%>
+			    	    <div class ="description">Confirme Nova Senha:</div> <div class ="field"><%= f.password_field :password_confirmation%> </div>
 			    	</div>
 			    	<%= f.submit "Redefinir" %>
 				</fieldset>
