--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -66,7 +66,9 @@
           </ul>
         </li>
         <li>
-          <a href="#"><i class="fa fa-sign-out"></i></a>
+          <a id="logout" href="<%= url_for(controller: 'session', action: 'logout', only_path: true) %>">
+            <i class="fa fa-sign-out"></i>
+          </a>
         </li>
       </ul>
     </div>
