--- a/app/views/preferences/preferences.html.erb
+++ b/app/views/preferences/preferences.html.erb
@@ -1,14 +1,32 @@
-<% @page_title = "UserPrefs | Preferences" %>
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
-			<div class="login-panel panel panel-default">
-				<div class="panel-heading">Preferences</div>
-				<div class="menu">
-					<div><a href="password">Security</a></div>
-					
-				</div>
-				<div class="panel-body">
-				
-                </div>
-		</div>
-	</div>	
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>AdminLTE 2 | Log in</title>
+	<meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+	<![endif]-->
+	<%= csrf_meta_tags %>
+</head>
+<body class="login-page">
+	<div class="login-box">
+		<div class="login-box-body">
+			<p class="login-box-msg">Preferences</p>
+			<ul class="nav nav-tabs">
+  				<li role="presentation"><a href="../dashboard/dashboard">Home</a></li>
+  				<li role="presentation"><a href="password">Security</a></li>
+  				<li role="presentation"><a href="#">E-mail</a></li>
+			</ul>
+		</div><!-- /.login-box-body -->
+	</div><!-- /.login-box -->
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+</body>
+</html>
+
