--- a/app/views/preferences/preferences.html.erb
+++ b/app/views/preferences/preferences.html.erb
@@ -5,10 +5,9 @@
 				<div class="panel-heading">Preferences</div>
 				<div class="menu">
 					<div><a href="password">Security</a></div>
-					
+					<div><a href="profile">Editar Perfil</a></div>
 				</div>
 				<div class="panel-body">
-				
                 </div>
 		</div>
 	</div>	
