--- a/app/views/layouts/_admin_lte_2_sidebar.html.erb
+++ b/app/views/layouts/_admin_lte_2_sidebar.html.erb
@@ -7,12 +7,10 @@
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
+        <img src="<%= current_user.profile_image %>" class="img-circle" alt="User Image" />
       </div>
       <div class="pull-left info">
-        <% if current_user %>
-          <p><%= current_user.name %></p>
-        <% end %>
+        <p><%= current_user.name %></p>
         <!-- Status -->
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
