--- a/app/views/preferences/profile.html.erb
+++ b/app/views/preferences/profile.html.erb
@@ -5,6 +5,7 @@
                 <h3 class="box-title">Editar Perfil</h3>
             </div>
             <div class="box-body">
+                <div class = "col-xs-3"></div>
                 <div class = "col-xs-6">
                     <%= form_for(:user,  :url => {:controller => 'preferences', :action => 'profile'}) do |f| %>
                         <b>Nome:</b>
@@ -17,8 +18,10 @@
         				</div>
         				<b>Foto de Perfil:</b>
         				<div class="form-group has-feedback">
-        				    <img src="<%= params[:user].profile_image %>" alt="Não há uma imagem de perfil ainda..."/>
-        					<% #f.file_field :profile_image, class: 'form-control' %>
+        				    <img src="<%= params[:user].profile_image %>" height="160px" width="160px" alt="Não há uma imagem de perfil ainda..."/>
+        				    <br><br>
+        				    <b>Atualizar Foto de Perfil:</b>
+        					<%= f.file_field :profile_image, :accept => '.jpg', class: 'form-control' %>
         				</div>
         				<div class="row">
         				    <div class="col-xs-8"></div>
