Textos traduzidos para seguir o padrão do site

--- a/app/views/layouts/admin_lte_2_prefs.html.erb
+++ b/app/views/layouts/admin_lte_2_prefs.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Restrot | Preferences</title>
+  <title>Restrot | Preferências</title>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
@@ -28,8 +28,12 @@
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <h1>
-          Preferences
+          Preferências
         </h1>
+        <ul class="nav nav-pills">
+  				<li role="presentation" id="password"><a href="password">Segurança</a></li>
+  				<li role="presentation" id="email"><a href="#">E-mail</a></li>
+			  </ul>
       </section>
 
       <!-- Main content -->
