--- a/app/views/preferences/password.html.erb
+++ b/app/views/preferences/password.html.erb
@@ -1,57 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>AdminLTE 2 | Log in</title>
-	<meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-	<![endif]-->
-	<%= csrf_meta_tags %>
-</head>
-<body>
-			<% flash.each do |name, msg| -%>
-				<%= content_tag :div, msg, class: name %>
-			<% end -%>
-			
-			<ul class="nav nav-tabs">
-  				<li role="presentation"  class="active"><a href="password">Security</a></li>
-  				<li role="presentation"><a href="#">E-mail</a></li>
-			</ul>
-			<%= form_for(:user,  :url => {:controller => 'preferences', :action => 'password'}) do |f| %>
-				<div class="form-group has-feedback">
-					Old Password:
-					<%= f.password_field :oldPassword, class: 'form-control', autocomplete: 'off' %>
-				</div>
-				<div class="form-group has-feedback">
-					New Password
-					<%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
-				</div>
-				<div class="form-group has-feedback">
-					Confirm Password
-					<%= f.password_field :passwordConfirmation, class: 'form-control', autocomplete: 'off' %>
-				</div>
-				<div class="row">
-					<div class="col-xs-8">
-						<!-- Uncomment next section when we implement remember me option -->
-						<!-- <div class="checkbox icheck">
-							<label>
-								<input type="checkbox"> Remember Me
-							</label>
-						</div> -->
-					</div><!-- /.col -->
-					<div class="col-xs-4">
-						<%= f.submit :Submit, class: 'btn btn-primary btn-block btn-flat' %>
-					</div><!-- /.col -->
-				</div>
-			<% end %>
+<%= form_for(:user,  :url => {:controller => 'preferences', :action => 'password'}) do |f| %>
+	<div class="form-group has-feedback">
+		Senha antiga:
+		<%= f.password_field :oldPassword, class: 'form-control', autocomplete: 'off' %>
+	</div>
+	<div class="form-group has-feedback">
+		Nova senha:
+		<%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
+	</div>
+	<div class="form-group has-feedback">
+		Confirme a senha:
+		<%= f.password_field :passwordConfirmation, class: 'form-control', autocomplete: 'off' %>
+	</div>
+	<div class="row">
+		<div class="col-xs-8">
+			<!-- Uncomment next section when we implement remember me option -->
+			<!-- <div class="checkbox icheck">
+				<label>
+					<input type="checkbox"> Remember Me
+				</label>
+			</div> -->
+		</div><!-- /.col -->
+		<div class="col-xs-4">
+			<%= f.submit :Submit, class: 'btn btn-primary btn-block btn-flat' %>
+		</div><!-- /.col -->
+	</div>
+<% end %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-</body>
-</html>
-
