File Upload has been deprecated, heroku doesn't support file uploading [#132702911]

--- a/app/views/preferences/profile.html.erb
+++ b/app/views/preferences/profile.html.erb
@@ -21,7 +21,7 @@
         				    <img src="<%= params[:user].profile_image %>" height="160px" width="160px" alt="Não há uma imagem de perfil ainda..."/>
         				    <br><br>
         				    <b>Atualizar Foto de Perfil:</b>
-        					<%= f.file_field :profile_image, :accept => '.jpg', class: 'form-control' %>
+        					<% #f.file_field :profile_image, :accept => '.jpg', class: 'form-control' %>
         				</div>
         				<div class="row">
         				    <div class="col-xs-8"></div>
