alteração no layout

--- a/app/views/layouts/admin_lte_2_prefs.html.erb
+++ b/app/views/layouts/admin_lte_2_prefs.html.erb
@@ -29,7 +29,7 @@
         <h1>
           Preferências
         </h1>
-        <ul class="nav nav-pills">
+        <ul class="nav nav-tabs">
   				<li role="presentation" id="password_menu"><a href="password">Segurança</a></li>
   				<li role="presentation" id="email_menu"><a href="#">E-mail</a></li>
 			  </ul>
