Busca os ingredientes do banco

--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -11,6 +11,7 @@
                         <tr>
                             <td><class "img"><%= image_tag("#{ingredient.picture}") %> </class></td>
                             <td><%= ingredient.name %></td>
+                            <td><%= ingredient.quantity %></td>
                             <td><%= ingredient.unit_of_measure %></td>
                             <td><spam class="glyphicon glyphicon-edit btn btn-primary"></spam></td>
                             <td><spam class="glyphicon glyphicon-trash btn btn-danger"></spam></td>
