--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -1,3 +1,11 @@
+<section class="content-header">
+  <h1>
+    Dashboard
+    <small>Números</small>
+  </h1>
+</section>
+<br><br>
+
 <div class="row">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="info-box">
