Insere link no botão ver todos da dashboard

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -75,7 +75,7 @@
                     </table>
                 </div>
                 <div class="box-header">
-                    <button type="button" class="btn btn-primary" href="ingredients/index">Ver todos</button>
+                    <a href="/ingredients/index"><button type="button" class="btn btn-primary">Ver todos</button></a>
                 </div>
             </div>
         </div>
