--- a/app/assets/stylesheets/ingredients.scss
+++ b/app/assets/stylesheets/ingredients.scss
@@ -15,11 +15,16 @@ table{
     text-align: center;
 }
 
-.centralizado {
+.inserir-btn {
     float: none !important;
     margin: 0 auto;
 }
 
 .title{
     font-weight: bold;
+}
+
+.no-ingredient{
+    font-size: 150%;
+    text-align: center;
 }
