--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -75,7 +75,7 @@
                     </table>
                 </div>
                 <div class="box-header">
-                    <button type="button" class="btn btn-primary" href="ingredients/index">Ver todos</button>
+                    <button type="button" id="ver-todos" class="btn btn-primary" href="ingredients/index">Ver todos</button>
                 </div>
             </div>
         </div>
