--- a/app/views/layouts/_admin_lte_2_sidebar.html.erb
+++ b/app/views/layouts/_admin_lte_2_sidebar.html.erb
@@ -35,7 +35,7 @@
         <!-- Optionally, you can add icons to the links -->
       <li class="<%= 'active' if params[:controller] == 'dashboard' %>"><a href="/dashboard/dashboard"><i class='fa fa-link'></i> <span>Home</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Nova Busca</span></a></li>
-      <li class="<%= 'active' if params[:controller] == 'ingredients' %>"><a href="/ingredients/index"><i class="fa fa-link"></i> <span>Meus Ingredientes</span></a></li>
+      <li class="<%= 'active' if params[:controller] == 'ingredients' %>"><a href="/ingredients/index" id="meus-ingredientes"><i class="fa fa-link"></i> <span>Meus Ingredientes</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Favoritos</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Histórico</span></a></li>
       <li><a href="#"><i class='fa fa-link'></i> <span>Preferências</span></a></li>
