--- a/app/views/preferences/password.html.erb
+++ b/app/views/preferences/password.html.erb
@@ -1,28 +1,36 @@
-<%= form_for(:user,  :url => {:controller => 'preferences', :action => 'password'}) do |f| %>
-	<div class="form-group has-feedback">
-		Senha antiga:
-		<%= f.password_field :oldPassword, class: 'form-control', autocomplete: 'off' %>
-	</div>
-	<div class="form-group has-feedback">
-		Nova senha:
-		<%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
-	</div>
-	<div class="form-group has-feedback">
-		Confirme a senha:
-		<%= f.password_field :passwordConfirmation, class: 'form-control', autocomplete: 'off' %>
-	</div>
-	<div class="row">
-		<div class="col-xs-8">
-			<!-- Uncomment next section when we implement remember me option -->
-			<!-- <div class="checkbox icheck">
-				<label>
-					<input type="checkbox"> Remember Me
-				</label>
-			</div> -->
-		</div><!-- /.col -->
-		<div class="col-xs-4">
-			<%= f.submit :Submit, class: 'btn btn-primary btn-block btn-flat' %>
-		</div><!-- /.col -->
-	</div>
-<% end %>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+        	<div class="box-header with-border">
+                <h3 class="box-title">Modificar Senha</h3>
+            </div>
+            <div class="box-body">
+                <div class = "col-xs-3" style="width: 28%"></div>
+                <div class = "col-xs-6">					
+					<%= form_for(:user,  :url => {:controller => 'preferences', :action => 'password'}) do |f| %>
+						<div class="form-group has-feedback">
+							<b>Senha antiga:</b>
+							<%= f.password_field :oldPassword, class: 'form-control', autocomplete: 'off' %>
+						</div>
+						<div class="form-group has-feedback">
+							<b>Nova senha:</b>
+							<%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
+						</div>
+						<div class="form-group has-feedback">
+							<b>Confirme a senha:</b>
+							<%= f.password_field :passwordConfirmation, class: 'form-control', autocomplete: 'off' %>
+						</div>
+						<div class="row">
+							<div class="col-xs-8">
+							</div>
+							<div class="col-xs-4">
+								<%= f.submit :Submit, class: 'btn btn-primary btn-block btn-flat' %>
+							</div>
+						</div>
+					<% end %>
+    	        </div>
+            </div>
+        </div>
+    </div>
+</div>					
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
