--- a/app/views/preferences/profile.html.erb
+++ b/app/views/preferences/profile.html.erb
@@ -5,7 +5,7 @@
                 <h3 class="box-title">Editar Perfil</h3>
             </div>
             <div class="box-body">
-                <div class = "col-xs-3"></div>
+                <div class = "col-xs-3" style="width: 28%"></div>
                 <div class = "col-xs-6">
                     <%= form_for(:user,  :url => {:controller => 'preferences', :action => 'profile'}) do |f| %>
                         <b>Nome:</b>
