layout bonito agora, com 'pop-up' quando clica pra ver o modo de preparo

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -75,7 +75,7 @@
                         </tr>
                         <% @ingredients.each do |ingredient| %>
                         <tr>
-                            <td><class "img"><%= image_tag("#{ingredient.picture}") %> </class></td>
+                            <td><class "img"><%= image_tag("#{ingredient.picture}", :class => "img-ingredient") %> </class></td>
                             <td><%= ingredient.name %></td>
                             <td><%= ingredient.quantity %></td>
                             <td><%= ingredient.unit_of_measure %></td>
