--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -7,7 +7,38 @@
     float: left;
 }
 
-img{
-    width: 222px;
+.img-recipe{
+    width: 244px;
     height: 180px;
+}
+
+.recipe-name{
+    text-align: center;
+}
+.modal-body{
+    font-size: 110%;
+}
+
+.modal-text{
+    position: relative;
+    float: left;
+}
+
+.modal-close-button{
+    float: right;
+    margin-right: 20px;
+}
+
+#myModalLabel{
+    font-size: 150%;
+    font-weight: bold;
+    font-family : "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    text-align: center;
+
+}
+.model-subtitle{
+    font-size: 105%;
+    font-weight: bold;
+    font-family : "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    text-align: center;
 }
