--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,45 +1,65 @@
 <container class ="centralizado">
-    <div class ="row">
-        <div class="col-md-12">
-            <div class="box box-primary">
-                <div class="box-header with-border">
-                    <h3 class="box-title title">Busca de Receitas</h3>
-                </div>
-                <div class="box-body">
-                    <% if @recipes.first.nil? %>
-                        <div class = 'no-ingredient'>
-                            <br>
-                            Você ainda não possui nenhum ingrediente na sua lista para uma busca personalizada! :( <br>
-                            Clique no botão abaixo para adicionar e buscar suas receitas! 
-                        </div>
-                    <% end %>
-                    <% if @recipes.first %>
-                        <% @recipes.each do |recipe| %>
-                            <div class="col-md-3">
-                                <div class="thumbnail">
-                                    <class "img"><%= image_tag("#{recipe[:image]}") %> </class>
-                                    <div class="caption">
-                                        <h3><%=recipe[:name]%></h3>
-                                        <p>Calorias: <%=recipe[:calories]%></p>
-                                        <p> Serve até: <%=recipe[:servings]%> </p>
-                                        <p> Ingredientes: 
-                                            <% recipe[:ingredients].each do |ingredient| %>
-                                                <%= ingredient.name %>,  
-                                    
-                                            <% end %>
-                                        </p>
-                                        <p><a href="#" class="btn btn-primary" role="button">Ver instruções</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                        <% end %>
-                    <% end %>
-                    <br>
-                    <div class="col-md-12 center-block">
-                        <button type="button" class="btn btn-success center-block">Inserir Ingrediente</button>
-                    </div>
-                </div>
+   <div class ="row">
+      <div class="col-md-12">
+         <div class="box box-primary">
+            <div class="box-header with-border">
+               <h3 class="box-title title">Busca de Receitas</h3>
             </div>
-        </div>
-    </div>
+            <div class="box-body">
+               <% if @recipes.first.nil? %>
+               <div class = 'no-ingredient'>
+                  <br>
+                  Você ainda não possui nenhum ingrediente na sua lista para uma busca personalizada! :( <br>
+                  Clique no botão abaixo para adicionar e buscar suas receitas! 
+               </div>
+               <% end %>
+               <% if @recipes.first %>
+               <% @recipes.each do |recipe| %>
+               <div class="col-md-3">
+                  <div class="thumbnail">
+                     <class "img"><%= image_tag("#{recipe[:image]}", :class => "img-recipe")%> </class>
+                     <div class="caption">
+                        <h3><%=recipe[:name]%></h3>
+                        <p>Calorias: <%=recipe[:calories]%></p>
+                        <p> Serve até: <%=recipe[:servings]%> pessoas</p>
+                        <p> Ingredientes: 
+                           <%= recipe[:ingredients].map { |ingredient| ingredient.name }.join(', ').html_safe %>
+                        </p>
+                        <div class="span4 proj-div" data-toggle="modal" data-target="#GSCCModal"><button type="button" class="btn btn-primary">Ver Instruções de Preparo</button></div>
+                        <div id="GSCCModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                           <div class="modal-dialog">
+                              <div class="modal-content">
+                                 <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;  </button>
+                                    <h4 class="modal-title" id="myModalLabel">Instruções</h4>
+                                 </div>
+                                 <div class="modal-body">
+                                    <div class ="modal-text col-md-3">
+                                       <div class="model-subtitle">Ingredientes: </div>
+                                       <br>
+                                       <% recipe[:ingredients].each do |ingredient| %>
+                                       <%= ingredient.name %>  <br>
+                                       <% end %>
+                                    </div>
+                                    <div class ="modal-text col-md-9">
+                                       <div class="model-subtitle">Modo de Preparo: </div>
+                                       <br>
+                                       <% recipe[:instructions].each_with_index do |step, i| %>
+                                       <%= i + 1 %>. <%= step %>  <br><br>
+                                       <% end %>
+                                    </div>
+                                    <button type="button" class="btn btn-primary center-block" data-dismiss="modal">Close</button>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <% end %>
+               <% end %>
+            </div>
+         </div>
+      </div>
+   </div>
 </container>
