pequenas mudanças no layout e botão Inscreva-se arrumado

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -132,8 +132,11 @@
 		.navbar-default.shrink .navbar-toggle {
 			margin-top: 25px;
 		}
-
-
+		
+		#inscreva-se{
+		    color: white;
+		}
+		
     </style>
 
     <!-- Full Page Image Background Carousel Header -->
@@ -182,7 +185,7 @@
                             <h1>BORA COZINHAR!</h1>
                             <h3>Saiba as receitas mais gostosas e mais simples de se fazer com o que você tem na sua casa!</h3>
                         </hgroup>
-                        <button class="btn btn-hero btn-lg" role="button">Inscreva-se</button>
+                        <a href="/users/new" id="inscreva-se"><button class="btn btn-hero btn-lg" role="button">Inscreva-se</button></a>
                     </div>
                 </div>
             </div>
