Atualização do Controller

--- a/app/views/ingredients_users/edit.html.erb
+++ b/app/views/ingredients_users/edit.html.erb
@@ -1,8 +1,8 @@
-<h3> <%= @ingredients.first.name %> </h3>
+<h3> <%= @ingredients.name %> </h3>
 
 <div class="form-group">
-    <%= form_for @ingredients.first do |f| %>
-        <%= f.label "", "Qual a quantidade desse item que tem disponível? (em #{@ingredients.first.unit_of_measure})"%>
+    <%= form_for @ingredients do |f| %>
+        <%= f.label "", "Qual a quantidade desse item que tem disponível? (em #{@ingredients.unit_of_measure})"%>
         <%= f.text_field :quantity, class: "form-control", autofocus: true %>
         <br>
         <%= f.submit "Atualizar", class: "btn btn-success center-block" %>
